--- a/templates/services.html
+++ b/templates/services.html
@@ -4,7 +4,7 @@
     <div ng-repeat="service in services">
         <div class="row service">
             <div class="col-md-2">
-                <img src="img/computer.png" alt="computer">
+                <img src="{{service.image}}" alt="computer">
             </div>
             <div class="col-md-10">
                 <h3>{{service.name}}</h3>
